fix: fix z-index

--- a/eco-sounds/style.css
+++ b/eco-sounds/style.css
@@ -111,6 +111,7 @@ body {
 
 .btn-play--pause {
     background-image: url('./assets/svg/pause.svg');
+    z-index: 10;
 }
 
 .footer {
